fixed col alignments

--- a/curiositymachine/sass/pages/_family-dashboard.scss
+++ b/curiositymachine/sass/pages/_family-dashboard.scss
@@ -34,7 +34,7 @@
     border-style: solid;
     border-width: 2px;
     border-color: rgb(52, 152, 219);
-    padding: 20px;
+
   }
 
   .about-stage {
@@ -50,13 +50,14 @@
   }
 
   .about-stage h4 {
-    padding: 0px 20px 0px 20px;
+    color: gray;
+    padding: 0px 10px 0px 10px;
     margin: 10px 20px 0px 0px;
   }
 
   .about-stage .col-1 {
     text-align: right;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 0px 0px 0px;
   }
 
   .about-stage .col-11 {
@@ -71,12 +72,13 @@
   }
 
   .num-col {
-    align-content: right;
+    align-content: left;
   }
 
   .number {
     border-radius: 100%;
-    padding: 5px 10px;
+    padding: 5px 10px 5px 10px;
+    margin: 0px 5px;
     line-height: 1;
     font-size: 1em;
     color: #fff;
