--- a/curiositymachine/static/css/main.css
+++ b/curiositymachine/static/css/main.css
@@ -9266,8 +9266,7 @@ footer {
   border-radius: 20px;
   border-style: solid;
   border-width: 2px;
-  border-color: #3498db;
-  padding: 20px; }
+  border-color: #3498db; }
 
 .family-dashboard .about-stage {
   border-radius: 30px;
@@ -9281,12 +9280,13 @@ footer {
   margin: 0px 0px 30px 0px; }
 
 .family-dashboard .about-stage h4 {
-  padding: 0px 20px 0px 20px;
+  color: gray;
+  padding: 0px 10px 0px 10px;
   margin: 10px 20px 0px 0px; }
 
 .family-dashboard .about-stage .col-1 {
   text-align: right;
-  padding: 0px 20px 0px 20px; }
+  padding: 0px 0px 0px 0px; }
 
 .family-dashboard .about-stage .col-11 {
   text-align: left;
@@ -9298,11 +9298,12 @@ footer {
   margin: 0px 20px 20px 20px; }
 
 .family-dashboard .num-col {
-  align-content: right; }
+  align-content: left; }
 
 .family-dashboard .number {
   border-radius: 100%;
-  padding: 5px 10px;
+  padding: 5px 10px 5px 10px;
+  margin: 0px 5px;
   line-height: 1;
   font-size: 1em;
   color: #fff;
